@startuml MealBridge_ERD

hide methods
hide stereotypes

skinparam BackgroundColor #0d1117
skinparam DefaultFontColor #c9d1d9
skinparam ArrowColor #8b949e
skinparam linetype ortho

skinparam class {
    BackgroundColor #161b22
    BorderColor #30363d
    FontColor #c9d1d9
    HeaderBackgroundColor #21262d
}

skinparam entity {
    BackgroundColor #161b22
    BorderColor #30363d
    FontColor #c9d1d9
}

skinparam enum {
    BackgroundColor #161b22
    BorderColor #30363d
    FontColor #c9d1d9
}

title MealBridge - Entity Relationship Diagram

' =========================================================
' Enums
' =========================================================

enum Role {
    DONOR
    RECIPIENT
    VOLUNTEER
    ADMIN
    MANAGER
}

enum VolunteerType {
    INDIVIDUAL
    ORGANIZATION
}

enum TransportType {
    CAR
    PUBLIC_TRANSPORT
    VAN
    BICYCLE
    MOTORCYCLE
    WALKING
    OTHER
}

enum DonorOrganizationType {
    RESTAURANT
    CAFE
    HOTEL
    CATERING
    GOVERNMENT
    OTHER
}

enum RecipientOrganizationType {
    SHELTER
    COMMUNITY_CENTER
    CHARITY
    GOVERNMENT
    OTHER
}

enum DonationStatus {
    AVAILABLE
    RESERVED
    COMPLETED
    CANCELLED
    EXPIRED
}


enum DonationRequestStatus {
    PENDING
    ACCEPTED
    REJECTED
    CANCELLED
}

enum ClaimStatus {
    ACTIVE
    COMPLETED
    CANCELLED
}

enum PickupMethod {
    SELF
    VOLUNTEER
}

enum PickupRequestStatus {
    PENDING
    ACCEPTED
    REJECTED
    CANCELLED
    COMPLETED
    EXPIRED
}

enum ConversationType {
    DONOR_RECIPIENT
    RECIPIENT_VOLUNTEER
}

enum ReportStatus {
    PENDING
    REVIEWED
    RESOLVED
    REJECTED
}

' =========================================================
' Entities/Tables
' =========================================================

entity User {
    * id : UUID <<PK>>
    --
    name : String
    email : String <<UNIQUE>>
    isEmailVerified : Boolean default(false)
    isBlocked : Boolean default(false)
    passwordHash : String
    phone : String <<UNIQUE>>
    role : Role
    tokenVersion : Int default(0)
    createdAt : DateTime
    updatedAt : DateTime
}

entity DonorProfile {
    * id : UUID <<PK>>
    --
    userId : UUID <<FK, UNIQUE>>
    profilePicture : JSON <<NULLABLE>>
    organizationName : String <<NULLABLE>>
    organizationType : DonorOrganizationType <<NULLABLE>>
    address : String
    verificationDocuments : JSON[] <<MIN:1, MAX:5>>
    verificationStatus : Boolean
    createdAt : DateTime
    updatedAt : DateTime
}

entity RecipientProfile {
    * id : UUID <<PK>>
    --
    userId : UUID <<FK, UNIQUE>>
    profilePicture : JSON <<NULLABLE>>
    organizationName : String <<NULLABLE>>
    organizationType : RecipientOrganizationType <<NULLABLE>>
    address : String
    verificationDocuments : JSON[] <<MIN:1, MAX:5>>
    verificationStatus : Boolean
    createdAt : DateTime
    updatedAt : DateTime
}

entity VolunteerProfile {
    * id : UUID <<PK>>
    --
    userId : UUID <<FK, UNIQUE>>
    profilePicture : JSON <<NULLABLE>>
    address : String
    type : VolunteerType
    transportType : TransportType
    availabilityStatus : Boolean
    verificationDocuments : JSON[] <<MIN:1, MAX:5>>
    verificationStatus : Boolean
    createdAt : DateTime
    updatedAt : DateTime
}

entity Donation {
    * id : UUID <<PK>>
    --
    donorId : UUID <<FK>>
    title : String
    description : String
    images : String[]
    foodType : String
    quantity : Int
    unit : String
    address : String
    availableFrom : DateTime
    availableUntil : DateTime

    status : DonationStatus
    createdAt : DateTime
    updatedAt : DateTime
}

entity DonationRequest {
    * id : UUID <<PK>>
    --
    donationId : UUID <<FK>>
    recipientId : UUID <<FK>>
    quantityRequested : Int
    message : String <<NULLABLE>>
    status : DonationRequestStatus
    createdAt : DateTime
    updatedAt : DateTime
}

entity DonationClaim {
    * id : UUID <<PK>>
    --
    donationRequestId : UUID <<FK, UNIQUE>>
    donationId : UUID <<FK>>
    recipientId : UUID <<FK>>
    quantityClaimed : Int
    pickupDeadline : DateTime
    pickupMethod : PickupMethod default(SELF)
    status : ClaimStatus
    createdAt : DateTime
    updatedAt : DateTime
}

entity PickupRequest {
    * id : UUID <<PK>>
    --
    donationClaimId : UUID <<FK, UNIQUE>>
    recipientId : UUID <<FK>>
    volunteerId : UUID <<FK, NULLABLE>>
    pickupAddress : String
    deliveryAddress : String
    message : String <<NULLABLE>>
    requestedAt : DateTime
    acceptedAt : DateTime <<NULLABLE>>
    completedAt : DateTime <<NULLABLE>>
    status : PickupRequestStatus
    createdAt : DateTime
    updatedAt : DateTime
}

entity Conversation {
    * id : UUID <<PK>>
    --
    donationClaimId : UUID <<FK>>
    conversationType : ConversationType
    createdAt : DateTime
    updatedAt : DateTime
}

entity ConversationParticipant {
    * conversationId : UUID <<PK, FK>>
    * userId : UUID <<PK, FK>>
    --
    joinedAt : DateTime
    lastReadAt : DateTime <<NULLABLE>>
}

entity Message {
    * id : UUID <<PK>>
    --
    conversationId : UUID <<FK>>
    senderId : UUID <<FK>>
    content : String
    createdAt : DateTime
    updatedAt : DateTime
}

entity Notification {
    * id : UUID <<PK>>
    --
    userId : UUID <<FK>>
    sourceReportId : UUID <<FK, NULLABLE>>
    title : String
    message : String
    isRead : Boolean
    createdAt : DateTime
}

entity Report {
    * id : UUID <<PK>>
    --
    reporterId : UUID <<FK>>
    reportedUserId : UUID <<FK, NULLABLE>>
    title : String
    description : String
    status : ReportStatus
    reviewedById : UUID <<FK, NULLABLE>>
    reviewedAt : DateTime <<NULLABLE>>
    createdAt : DateTime
    updatedAt : DateTime
}

entity SiteSetting {
    * id : UUID <<PK>>
    --
    title : String <<NULLABLE>>
    description : String <<NULLABLE>>
    logoUrl : String <<NULLABLE>>
    faviconUrl : String <<NULLABLE>>
    contactEmail : String <<NULLABLE>>
    contactPhone : String <<NULLABLE>>
    address : String <<NULLABLE>>
    updatedById : UUID <<FK, NULLABLE>>
    updatedAt : DateTime
}

entity BlockedUser {
    * id : UUID <<PK>>
    --
    blockerId : UUID <<FK>>
    blockedId : UUID <<FK>>
    reason : String
    message : String
    createdAt : DateTime
    updatedAt : DateTime
}

' =========================================================
' Relationships
' =========================================================

User ||--o| DonorProfile
User ||--o| RecipientProfile
User ||--o| VolunteerProfile

DonorProfile ||--o{ Donation

Donation ||--o{ DonationRequest

RecipientProfile ||--o{ DonationRequest

DonationRequest ||--o| DonationClaim

Donation ||--o{ DonationClaim

RecipientProfile ||--o{ DonationClaim

DonationClaim ||--o| PickupRequest

RecipientProfile ||--o{ PickupRequest

VolunteerProfile ||--o{ PickupRequest

DonationClaim ||--o{ Conversation

Conversation ||--o{ ConversationParticipant

User ||--o{ ConversationParticipant

Conversation ||--o{ Message

User ||--o{ Message

User ||--o{ Notification : receives

Report ||--o{ Notification : triggers (to reporter)

User ||--o{ Report : creates

User ||--o{ Report : reported

User ||--o{ Report : reviews

User ||--o{ SiteSetting : updates

User ||--o{ BlockedUser : blocker
User ||--o| BlockedUser : blocked

' =========================================================
' VISUAL LAYOUT
' =========================================================

' Users
DonorProfile -[hidden]right- RecipientProfile
RecipientProfile -[hidden]right- VolunteerProfile

' Donation workflow
Donation -[hidden]down- DonationRequest
DonationRequest -[hidden]down- DonationClaim
DonationClaim -[hidden]down- PickupRequest

' Chat
Conversation -[hidden]right- ConversationParticipant
ConversationParticipant -[hidden]right- Message

' Admin
Notification -[hidden]right- Report
Report -[hidden]right- SiteSetting
SiteSetting -[hidden]right- BlockedUser

@enduml


